<resources>
    <string name="app_name">Chordiste</string>
    <string name="nav_library">Library</string>
    <string name="nav_midi">MIDI</string>
    <string name="nav_bands">Bands</string>
    <string name="nav_community">Community</string>
    <string name="nav_search">Search</string>
    <string name="nav_sync">Sync</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help &amp; Feedback</string>
    <string name="tab_setlists">Setlists</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_songs">Songs</string>
    <string name="library_artist_empty">No artist has been added to your library yet.  Use the plus button to add one.</string>
    <string name="library_song_empty">No song has been added to your library yet.  Use the plus button to add one.</string>
    <string name="library_setlist_empty">No setlist has been added to your library yet.  Use the plus button to add one.</string>
    <string name="artist_song_empty">This artist does not have any song associated with him yet.  Use the plus button to add one.</string>
    <string name="song_document_empty">This song does not have any document associated with it yet.  Use the plus button to add one.</string>
    <string name="setlist_song_empty">This setlist does not have any song associated with it yet.  Use the plus button to add one.</string>
    <string name="band_empty">No band has been added yet.  Use the plus button to add one.</string>
    <string name="band_musician_empty">This band does not have any musician associated with it yet.  Use the plus button to add one.</string>
    <string name="library_document_empty">This song does not have a valid document selected.</string>
    <string name="midi_message_empty">No MIDI message has been added to your library yet.  Use the plus button to add one.</string>
    <string name="document_viewer_no_file">No document has been associated with this song or none has been tagged as preferred.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="menu_edit_artist">Edit artist</string>
    <string name="menu_remove_artist">Remove artist</string>
    <string name="dialog_remove_artist">Do you really want to remove this artist?</string>
    <string name="menu_edit_song">Edit song</string>
    <string name="menu_remove_song">Remove song</string>
    <string name="dialog_remove_song">Do you really want to remove this song?\nThis will remove all documents associated with it.</string>
    <string name="menu_edit_document">Edit document</string>
    <string name="menu_duplicate_document">Duplicate document</string>
    <string name="menu_remove_document">Remove document</string>
    <string name="menu_set_preferred_document">Set as preferred</string>
    <string name="dialog_remove_document">Do you really want to remove this document?</string>
    <string name="menu_edit_file">Edit file</string>
    <string name="menu_export_file">Export file</string>
    <string name="menu_share_file">Share file</string>
    <string name="menu_transpose_file">Transpose</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_batch_import">Import songs</string>
    <string name="menu_restore_database">Restore database</string>
    <string name="menu_backup_database">Backup database</string>
    <string name="menu_edit_band">Edit band</string>
    <string name="menu_remove_band">Remove band</string>
    <string name="dialog_remove_band">Do you really want to remove this band?\nThis will remove all musicians associated with it.</string>
    <string name="menu_edit_musician">Edit musician</string>
    <string name="menu_remove_musician">Remove musician</string>
    <string name="dialog_remove_musician">Do you really want to remove this musician?</string>
    <string name="menu_send_email">Send email</string>
    <string name="menu_share_set">Share set</string>
    <string name="menu_edit_set">Edit set</string>
    <string name="menu_remove_set">Remove set</string>
    <string name="dialog_remove_set">Do you really want to remove this set?</string>
    <string name="menu_edit_set_song">Edit song</string>
    <string name="menu_remove_set_song">Remove song from set</string>
    <string name="dialog_remove_set_song">Do you really want to remove this song from this set?</string>
    <string name="menu_send_midi_message">Send message</string>
    <string name="menu_edit_midi_message">Edit message</string>
    <string name="menu_remove_midi_message">Remove message</string>
    <string name="dialog_remove_midi_message">Do you really want to remove this message?</string>
    <string name="menu_remove_document_midi_message">Detach message</string>
    <string name="dialog_remove_document_midi_message">Do you really want to detach this message?</string>
    <string name="menu_set_autosend_document_midi_message">Set auto send</string>
    <string name="menu_remove_autosend_document_midi_message">Remove auto send</string>
    <string name="menu_show_lyrics">Show lyrics</string>
    <string name="menu_show_chords">Show chords</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="server_client_id">445191369134-atlsls0ru7svevfg6ag0lv5be9bk9vbp.apps.googleusercontent.com</string>
    <string name="title_activity_artist_edit">Add/Edit artist</string>
    <string name="artist_edit_artist_name">Artist name</string>
    <string name="artist_edit_enter_name">Enter name</string>
    <string name="artist_edit_photo">Artist photo</string>
    <string name="artist_edit_enter_url">Enter url</string>
    <string name="dialog_text_searching_picture">Searching for pictures&#8230;</string>
    <string name="dialog_text_select_picture">Select a picture from the list.</string>
    <string name="dialog_text_no_picture">No picture found.</string>
    <string name="title_activity_song_edit">Add/Edit song</string>
    <string name="song_edit_title">Song title</string>
    <string name="song_edit_enter_title">Enter title</string>
    <string name="song_edit_artist">Artist</string>
    <string name="song_edit_key">Key</string>
    <string name="song_edit_tempo">Tempo</string>
    <string name="song_edit_enter_tempo">Enter tempo</string>
    <string name="song_edit_duration">Duration</string>
    <string name="song_edit_minute">Min</string>
    <string name="song_edit_commas">:</string>
    <string name="song_edit_second">Sec</string>
    <string name="song_edit_document">Document</string>
    <string name="song_edit_notes">Notes</string>
    <string name="song_edit_enter_notes">Enter notes</string>
    <string name="title_activity_document_edit">Add/Edit document</string>
    <string name="document_edit_file">File</string>
    <string name="document_edit_no_file_warning">No file selected</string>
    <string name="document_edit_description">Description</string>
    <string name="document_edit_enter_description">Enter description</string>
    <string name="document_edit_set_preferred">Set document as preferred</string>
    <string name="document_edit_midi_messages">MIDI messages</string>
    <string name="document_title_preferred">\u2713 Preferred</string>
    <string name="document_midi_message_autosend">\u2713 Auto send on load</string>
    <string name="title_activity_file_edit">Add/Edit file</string>
    <string name="title_activity_band_edit">Add/Edit band</string>
    <string name="band_edit_band_name">Band name</string>
    <string name="band_edit_enter_name">Enter name</string>
    <string name="title_activity_musician_edit">Add/Edit musician</string>
    <string name="musician_edit_name">Name</string>
    <string name="musician_edit_enter_name">Enter name</string>
    <string name="musician_edit_instrument">Instrument</string>
    <string name="musician_edit_enter_instrument">Enter instrument</string>
    <string name="musician_edit_email">Email</string>
    <string name="musician_edit_enter_email">Enter email</string>
    <string name="title_activity_set_edit">Add/Edit set</string>
    <string name="set_edit_name">Name</string>
    <string name="set_edit_enter_name">Enter name</string>
    <string name="set_edit_band">Band</string>
    <string name="set_edit_location">Location</string>
    <string name="set_edit_enter_location">Enter location</string>
    <string name="title_activity_set_song_picker">Select songs</string>
    <string name="title_activity_midi_message_edit">Add/Edit MIDI message</string>
    <string name="midi_message_name">Name</string>
    <string name="midi_message_enter_name">Enter name</string>
    <string name="midi_message_channel">Channel</string>
    <string name="midi_message_status_byte">Status byte</string>
    <string name="midi_message_first_data_byte">First data byte</string>
    <string name="midi_message_second_data_byte">Second data byte</string>
    <string name="midi_message_enter_first_data_byte">Enter first data byte</string>
    <string name="midi_message_enter_second_data_byte">Enter second data byte</string>
    <string name="title_activity_midi_message_picker">Select MIDI messages</string>
    <string name="reorder">Reorder</string>
    <string name="done">Done</string>
    <string name="transpose_popup">Transpose</string>
    <string name="transpose_popup_minus">-</string>
    <string name="transpose_use_sharps">Use sharps (♯)</string>
    <string name="transpose_use_flats">Use flats (♭)</string>
    <string name="chordpro_viewer_title">Title</string>
    <string name="chordpro_viewer_subtitle">Subtitle</string>
    <string name="chordpro_viewer_composer">Composed by</string>
    <string name="chordpro_viewer_arranger">Arranged by</string>
    <string name="chordpro_viewer_lyricist">Lyrics by</string>
    <string name="pdf_file">PDF file</string>
    <string name="cd_add_band">Add band</string>
</resources>