<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu_batch_import"
        android:orderInCategory="100"
        android:title="@string/menu_batch_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_backup_database"
        android:orderInCategory="100"
        android:title="@string/menu_backup_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_restore_database"
        android:orderInCategory="100"
        android:title="@string/menu_restore_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/menu_preferences"
        app:showAsAction="never" />
</menu>
