<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_song_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raffaelcavaliere.setlists.ui.midi.MidiMessageEditActivity"
    tools:showIn="@layout/activity_midi_message_edit">

    <TextView
        android:text="@string/midi_message_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:id="@+id/editMidiMessageNameLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/midi_message_name"
        android:id="@+id/editMidiMessageName"
        android:hint="@string/midi_message_enter_name"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/editMidiMessageNameLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        android:text="@string/midi_message_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMidiMessageName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editMidiMessageChannelLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="normal|bold" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editMidiMessageChannel"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/editMidiMessageChannelLabel" />

    <TextView
        android:text="@string/midi_message_status_byte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMidiMessageChannel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editMidiMessageStatusLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="normal|bold" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editMidiMessageStatus"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/editMidiMessageStatusLabel" />

    <TextView
        android:text="@string/midi_message_first_data_byte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMidiMessageStatus"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editMidiMessageData1Label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/editMidiMessageData1"
        android:hint="@string/midi_message_enter_first_data_byte"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/editMidiMessageData1Label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:inputType="number"
        android:maxLines="1" />

    <TextView
        android:text="@string/midi_message_second_data_byte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMidiMessageData1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editMidiMessageData2Label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/editMidiMessageData2"
        android:hint="@string/midi_message_enter_second_data_byte"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/editMidiMessageData2Label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:inputType="number"
        android:maxLines="1" />


</RelativeLayout>
