<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_song_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raffaelcavaliere.setlists.ui.band.MusicianEditActivity"
    tools:showIn="@layout/activity_musician_edit">

    <TextView
        android:text="@string/musician_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:id="@+id/editMusicianNameLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/musician_edit_name"
        android:id="@+id/editMusicianName"
        android:hint="@string/musician_edit_name"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/editMusicianNameLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        android:text="@string/musician_edit_instrument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMusicianName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editMusicianInstrumentLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="normal|bold" />

    <EditText
        android:text=""
        android:hint="@string/musician_edit_enter_instrument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editMusicianInstrument"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/editMusicianInstrumentLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        android:text="@string/musician_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMusicianInstrument"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:id="@+id/editMusicianEmailLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/editMusicianEmail"
        android:hint="@string/musician_edit_enter_email"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/editMusicianEmailLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:inputType="textEmailAddress"
        android:maxLines="1" />


</RelativeLayout>
